# xiaomi-s400-live

./: .env.example  .gitignore  README.md  credentials.example.json  pyproject.toml  requirements.txt
examples/: cloud_probe.py  local_test.py  multi_scale.py  single_scale.py  static_credentials.py
xiaomi_s400_live/: __init__.py  auth.py  body.py  cloud.py  crypto.py  protocol.py  scale.py
